--- a/index.html
+++ b/index.html
@@ -75,17 +75,38 @@
                         </div>
                     </div>
                     <div class="rightBox2">
-                       <div class="rightBox2Head"><h1>Popular Posts</h1></div> 
-
+                        <div class="rightBox2Head"><h1>Popular Posts</h1></div>
+                        <div class="rightBoxMain"><img src="img/skies.jpg" alt=""> <span>Lorem, ipsum dolor.</span></div>
+                        <div class="rightBoxMain"><img src="img/skies.jpg" alt=""> <span>Lorem, ipsum dolor.</span></div>
+                        <div class="rightBoxMain"><img src="img/skies.jpg" alt=""> <span>Lorem, ipsum dolor.</span></div>
+                        <div class="rightBoxMain"><img src="img/skies.jpg" alt=""> <span>Lorem, ipsum dolor.</span></div>
                     </div>
+                    <div class="rightBox2">
+                        <div class="rightBox2Head"><h1>Tags</h1></div>
+                        <div class="rightBoxTags">
+                            <span>travel</span>
+                            <span>travel</span>
+                            <span>travel</span>
+                            <span>travel</span>
+                            <span>travel</span>
+                            <span>travel</span>
+                            <span>travel</span>
+                            <span>travel</span>
+                            <span>travel</span>
+                            <span>travel</span>
+                        </div>
+
+                         </div>
 
                 </div>
             </div>
 
         </main>
         <footer>
-            <span class="footerBottom1">Previous</span>
-            <span class="footerBottom2">Next</span>
+            <div class="footerParent">
+                <span class="footerBottom1">Previous</span>
+                <span class="footerBottom1">Next</span>
+            </div>
         </footer>
     </body>
 </html>
